# nft-dns

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  main.c  new-main.c
dns_packet/: dns_packet.c  dns_packet.h  dns_parse_utils.c  dns_parse_utils.h  dns_types.h
dns_socket/: dns-socket.c  dns_socket.h
filedaemon/: filedaemon.c  filedaemon.h
hash/: hash.c  hash.h
hashset/: hashset.c  hashset.h
src/: CMakeLists.txt  main.c
src/dns_packet/: dns_parse_utils.c  dns_parse_utils.h  dns_types.h
src/dns_socket/: dns-socket.c
src/filedaemon/: filedaemon.c  filedaemon.h
src/hashset/: hashset.c  hashset.h
src/str/: str.c  str.h
src/structs/: map.c  map.h
